--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,4 +98,6 @@ add_subdirectory(tools/triage)   # Triage tool
 add_subdirectory(tools)
 add_subdirectory(man)
 
-include(cmake/clang_tidy.cmake)
+if(NOT DISABLE_CLANG_TIDY)
+    include(cmake/clang_tidy.cmake)
+endif()
