Modification to support binary relocation when the FILESDIR macro is a relative path.
A second macro BINDIR can be used in combination to indicate an optional binary folder
where the program is installed (e.g. the bin part from /usr/bin).

When FILESDIR is a relative path, the computed files dir will be the concatenation of
the executable parent path [- BINDIR>] + <FILESDIR>. If FILESDIR is an absolute path,
it is used unmodified.

This is a possible solution to https://github.com/danmar/cppcheck/pull/4424.

--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -73,14 +73,14 @@ install(TARGETS cppcheck
     COMPONENT applications)
 
 install(FILES ${addons}
-   DESTINATION ${FILESDIR}/addons
+   DESTINATION ${FULL_FILESDIR}/addons
    COMPONENT headers)
 
 install(FILES ${cfgs}
-   DESTINATION ${FILESDIR}/cfg
+   DESTINATION ${FULL_FILESDIR}/cfg
    COMPONENT headers)
 
 install(FILES ${platforms}
-   DESTINATION ${FILESDIR}/platforms
+   DESTINATION ${FULL_FILESDIR}/platforms
    COMPONENT headers)
 
